[package]
name = "xykpy"
description = "Prototype for a Python type checker written in Rust"
version = "0.0.1"
edition = "2024"
publish = false
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
homepage = "https://github.com/hurryabit/xykpy"
repository = "https://github.com/hurryabit/xykpy.git"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", tag = "0.12.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", tag = "0.12.0" }
