[package]
name = "xykpy"
description = "Prototype for a Python type checker written in Rust"
version = "0.0.1"
edition = "2024"
publish = false
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
homepage = "https://github.com/hurryabit/xykpy"
repository = "https://github.com/hurryabit/xykpy.git"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
ast = { git = "https://github.com/astral-sh/ruff/", package = "ruff_python_ast", tag = "0.12.0" }
parser = { git = "https://github.com/astral-sh/ruff/", package = "ruff_python_parser", tag = "0.12.0" }
static_assertions = "1.1.0"
text_size = { git = "https://github.com/astral-sh/ruff/", package = "ruff_text_size", tag = "0.12.0" }
